--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
+    "@iconify/vue": "^4.1.2",
+    "@tailwindcss/forms": "^0.5.9",
     "@tsconfig/node22": "^22.0.0",
     "@types/node": "^22.9.0",
     "@vitejs/plugin-vue": "^5.1.4",
