--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "pinia": "^2.2.6",
+    "sweetalert2": "^11.14.5",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
